--- a/package.json
+++ b/package.json
@@ -6,58 +6,60 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "format": "prettier --write .",
+        "ui:add": "npx shadcn-ui@latest add",
+        "supabase:generate-types": "npx supabase gen types typescript --project-id your-project-id > src/lib/supabase/database.types.ts"
     },
     "dependencies": {
-        "@mui/x-data-grid": "^7.23.0",
-        "@radix-ui/react-accordion": "^1.2.1",
-        "@radix-ui/react-alert-dialog": "^1.1.2",
-        "@radix-ui/react-aspect-ratio": "^1.1.0",
-        "@radix-ui/react-avatar": "^1.1.1",
-        "@radix-ui/react-checkbox": "^1.1.2",
-        "@radix-ui/react-dialog": "^1.1.2",
-        "@radix-ui/react-dropdown-menu": "^2.1.2",
-        "@radix-ui/react-icons": "^1.3.2",
-        "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-scroll-area": "^1.2.1",
-        "@radix-ui/react-select": "^2.1.2",
-        "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-switch": "^1.1.1",
-        "@radix-ui/react-tabs": "^1.1.1",
-        "@radix-ui/react-toast": "^1.2.2",
+        "@hookform/resolvers": "^3.3.4",
+        "@radix-ui/react-alert-dialog": "^1.0.5",
+        "@radix-ui/react-avatar": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-switch": "^1.0.3",
+        "@radix-ui/react-tabs": "^1.0.4",
+        "@radix-ui/react-toast": "^1.1.5",
+        "@radix-ui/react-tooltip": "^1.0.7",
         "@supabase/auth-helpers-nextjs": "^0.9.0",
-        "@supabase/supabase-js": "^2.46.2",
-        "@tanstack/react-table": "^8.20.5",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "date-fns": "^4.1.0",
-        "dotenv": "^16.4.5",
-        "framer-motion": "^11.12.0",
-        "geist": "^1.3.1",
-        "lucide-react": "^0.462.0",
-        "next": "14.1.3",
-        "next-themes": "^0.4.3",
-        "node-ical": "^0.20.1",
+        "@supabase/supabase-js": "^2.39.3",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "cmdk": "^0.2.1",
+        "date-fns": "^3.3.1",
+        "lucide-react": "^0.323.0",
+        "nanoid": "^5.0.5",
+        "next": "14.1.0",
+        "next-themes": "^0.2.1",
         "react": "^18.2.0",
-        "react-day-picker": "^9.4.1",
+        "react-day-picker": "^8.10.0",
         "react-dom": "^18.2.0",
-        "shadcn-ui": "^0.9.3",
-        "tailwind-merge": "^2.5.5",
+        "react-hook-form": "^7.50.1",
+        "recharts": "^2.12.0",
+        "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
-        "zod": "^3.23.8"
+        "zod": "^3.22.4"
     },
     "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "autoprefixer": "^10.0.1",
-        "dotenv-cli": "^7.4.4",
-        "eslint": "^8",
-        "eslint-config-next": "14.1.3",
+        "@types/node": "^20.11.17",
+        "@types/react": "^18.2.55",
+        "@types/react-dom": "^18.2.19",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "autoprefixer": "^10.4.17",
+        "eslint": "^8.56.0",
+        "eslint-config-next": "14.1.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "postcss": "^8",
+        "postcss": "^8.4.35",
+        "prettier": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.5.11",
+        "supabase": "^1.142.1",
         "tailwindcss": "^3.4.1",
-        "typescript": "^5"
+        "typescript": "^5.3.3"
     }
 }
